# time-reminder

./: .gitignore  README.md
dotnet/: Form1.Designer.cs  Form1.cs  Program.cs  reminder.csproj
masm64/: CMakeLists.txt  README.md
masm64/src/: CMakeLists.txt  makeit.bat  reminder.asm
masm64/src/res/: rsrc.rc
