cmake_minimum_required(VERSION 3.14)

set(ENV{ASM_MASM} "/masm64/bin64/ml64.exe")
set(CMAKE_LINKER  "/masm64/bin64/link.exe")
set(ENV{RC}       "/masm64/bin64/rc.exe")

set(CMAKE_ASM_MASM_LINK_EXECUTABLE "<CMAKE_LINKER> <FLAGS> <CMAKE_ASM_MASM_LINK_FLAGS> <LINK_FLAGS> <OBJECTS> /OUT:<TARGET> <LINK_LIBRARIES>")
set(CMAKE_RC_COMPILE_OBJECT        "$ENV{RC} <DEFINES> <INCLUDES> <FLAGS> /r /Fo<OBJECT> <SOURCE>")

project(reminder ASM_MASM)
set(CMAKE_EXE_LINKER_FLAGS "")
set(CMAKE_EXE_LINKER_FLAGS_DEBUG "")
set(CMAKE_EXE_LINKER_FLAGS_RELEASE "")
set(CMAKE_EXE_LINKER_FLAGS_MINSIZEREL "")
set(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "")

add_subdirectory(src bin)
